@@ -1,6 +1,5 @@
 import java.util.List;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -15,7 +14,7 @@ public class SupplierExample {
       // Usar o Supplier para obter uma lista com 5 saudações
       List<String> listaSaudacoes = Stream.generate(saudacao)
           .limit(5)
-          .collect(Collectors.toList());
+          .toList();
   
       // Imprimir as saudações geradas
       listaSaudacoes.forEach(System.out::println);
